WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106934
RenderText::computePreferredLogicalWidths does not need to be public
https://bugs.webkit.org/show_bug.cgi?id=106934
Summary
RenderText::computePreferredLogicalWidths does not need to be public
Ojan Vafai
Reported
2013-01-15 12:18:38 PST
RenderText::computePreferredLogicalWidths does not need to be public
Attachments
Patch
(2.27 KB, patch)
2013-01-15 12:19 PST
,
Ojan Vafai
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ojan Vafai
Comment 1
2013-01-15 12:19:38 PST
Created
attachment 182824
[details]
Patch
Levi Weintraub
Comment 2
2013-01-15 12:20:45 PST
Comment on
attachment 182824
[details]
Patch Ojan, destroyer of janky computePreferredLogicalWidths definitions.
WebKit Review Bot
Comment 3
2013-01-15 12:45:50 PST
Comment on
attachment 182824
[details]
Patch Clearing flags on attachment: 182824 Committed
r139773
: <
http://trac.webkit.org/changeset/139773
>
WebKit Review Bot
Comment 4
2013-01-15 12:45:53 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug