RenderText::computePreferredLogicalWidths does not need to be public https://bugs.webkit.org/show_bug.cgi?id=106934

Reviewed by Levi Weintraub.

* rendering/RenderCounter.h:
Add OVERRIDE keyword.
* rendering/RenderText.h:
Make protected.


Canonical link: https://commits.webkit.org/125156@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139773 268f45cc-cd09-0410-ab3c-d52691b4dbfc