Source/WebCore/rendering/RenderCounter.h
@@ -49,7 +49,7 @@ private:
     virtual PassRefPtr<StringImpl> originalText() const;
     
     virtual void updateText() OVERRIDE;
-    virtual void computePreferredLogicalWidths(float leadWidth);
+    virtual void computePreferredLogicalWidths(float leadWidth) OVERRIDE;
 
     // Removes the reference to the CounterNode associated with this renderer.
     // This is used to cause a counter display update when the CounterNode tree changes.
